# rootcause-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-TW.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/skills/bug-fix/: SKILL.md
.claude/skills/changelog-updater/: SKILL.md
.claude/skills/code-refactor/: SKILL.md
.claude/skills/code-review-workflow/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/ddd-architect/: SKILL.md
.claude/skills/feature-development/: SKILL.md
.claude/skills/git-doc-updater/: SKILL.md
.claude/skills/git-precommit/: SKILL.md
.claude/skills/memory-checkpoint/: SKILL.md
.claude/skills/memory-updater/: SKILL.md
.claude/skills/project-init/: SKILL.md
.claude/skills/readme-i18n/: SKILL.md
.claude/skills/readme-updater/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/roadmap-updater/: SKILL.md
.claude/skills/security-reviewer/: SKILL.md
.claude/skills/skill-generator/: SKILL.md
.claude/skills/test-generator/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/hfacs/: fishbone_6m.yaml  frameworks.yaml  hfacs_mes.yaml  keyword_rules.yaml  learned_rules.yaml  who_icps.yaml
data/: rca_sessions.db
data/exports/rc_sess_282d51c4/: why_tree_20260116_012523.md
data/exports/rc_sess_415940b8/: fishbone_20260116_014824.md  why_tree_20260116_014824.md
data/exports/rc_sess_5c486e7c/: fishbone_20260116_021551.md  why_tree_20260116_021552.md
data/exports/rc_sess_63f3cf90/: why_tree_20260116_011637.md
data/exports/rc_sess_976ad5da/: fishbone_20260116_011107.md  fishbone_20260116_011602.md  fishbone_20260116_012447.md  why_tree_20260116_011155.md
data/exports/rc_sess_b20ab22a/: fishbone_20260116_020846.md  why_tree_20260116_020846.md
data/exports/rc_sess_c7d0c7cc/: fishbone_20260116_020846.md  why_tree_20260116_020846.md
data/exports/rc_sess_cc4dce8e/: fishbone_20260116_010216.md
data/exports/rc_sess_cf93ffa4/: fishbone_20260116_013420.md  why_tree_20260116_013420.md
data/exports/rc_sess_da3c741c/: fishbone_20260116_014216.md  why_tree_20260116_014216.md
docs/: literature_review_clinical_rca.md  spec_v2.md
docs/architecture/: deep_rca_framework_v2.md
examples/ahrq_webmm_001_pediatric_opioid/: case_rawdata.md  expert_commentary.md
examples/dynamic_lvot_obstruction_sam/: ANALYSIS_RESULT.md  DATA_SOURCE_01_PRE_ANESTHESIA_EVALUATION.txt  DATA_SOURCE_02_ANESTHESIA_RECORD_INDUCTION.csv  DATA_SOURCE_03_INTRA_OP_TEE_STAT.txt  DATA_SOURCE_04_ARTERIAL_LINE_WAVEFORM.xml  DATA_SOURCE_05_SURGEON_COMM_LOG.txt  README.md
examples/lvad_suction_event/: ANALYSIS_RESULT.md  DATA_SOURCE_01_ER_ADMISSION.txt  DATA_SOURCE_02_ECHO_REPORT.txt  DATA_SOURCE_03_CONTROLLER_LOG.csv  DATA_SOURCE_04_LAB_RESULTS.txt  DATA_SOURCE_05_CLINICAL_UPDATE.txt  README.md
examples/postop_pe_death/: DATA_SOURCE_01_OP_NOTE.txt  DATA_SOURCE_02_NURSING_FLOWSHEET.csv  DATA_SOURCE_03_PROGRESS_NOTE.txt  DATA_SOURCE_04_NURSING_OBSERVATION.txt  DATA_SOURCE_05_MAR.csv  README.md
examples/pris_status_epilepticus/: ANALYSIS_RESULT.md  DATA_SOURCE_01_ER_TRANSFER_NOTE.txt  DATA_SOURCE_02_MICU_FLOWSHEET.csv  DATA_SOURCE_03_LAB_RESULTS.txt  DATA_SOURCE_04_NURSING_HANDOFF.txt  DATA_SOURCE_05_ECG_ANALYSIS.xml  README.md
examples/realistic_delayed_diagnosis/: DATA_SOURCE_01_EMR_OPD_VISIT.txt  DATA_SOURCE_02_RAD_REPORT.hl7  DATA_SOURCE_03_NURSING_LOGBOOK.csv  DATA_SOURCE_04_ADMIN_MEMO.msg  DATA_SOURCE_05_ER_TRIAGE_NOTE.txt  README.md
examples/trauma_hyperkalemia_arrest/: ANALYSIS_RESULT.md  DATA_SOURCE_01_TRAUMA_LOG.txt  DATA_SOURCE_02_ICU_FLOWSHEET.csv  DATA_SOURCE_03_LIS_MAINTENANCE.txt  DATA_SOURCE_04_ALARM_AUDIT.xml  DATA_SOURCE_05_AUTOPSY.txt  README.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  projectBrief.md
src/rootcause_mcp/: __init__.py  server.py
tests/: debug_keyword_matching.py  test_bidirectional_teaching_case.py  test_hfacs_suggester.py  test_mcp_tools.py
(+44 files in other folders)
