[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rootcause-mcp"
version = "0.1.0"
description = "Clinical Root Cause Analysis MCP Server - 臨床根因分析工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "RCA Team" }
]
keywords = ["mcp", "root-cause-analysis", "clinical", "fishbone", "5-why", "hfacs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # MCP Framework
    "mcp[cli]>=1.10.1",
    # Data & Validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Persistence
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    # Graph Analysis
    "networkx>=3.0",
    # Utilities
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Phase 2: Advanced Analysis (Rule Engine based, no owlready2)
# Note: owlready2 was removed - using YAML rules + Agent classification instead
# See: memory-bank/decisionLog.md [2026-01-15] 移除 owlready2

# Phase 3: Causal Inference
causal = [
    "dowhy[gcm]>=0.11",
    "causal-learn>=0.1.3",
    "numpy>=1.26",
    "pandas>=2.0",
]

# Full installation
full = [
    "rootcause-mcp[causal]",
]

# Development dependencies
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
]

[project.scripts]
rootcause-mcp = "rootcause_mcp.server:main"

[project.urls]
Documentation = "https://github.com/YOUR_ORG/rootcause-mcp#readme"
Issues = "https://github.com/YOUR_ORG/rootcause-mcp/issues"
Source = "https://github.com/YOUR_ORG/rootcause-mcp"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/rootcause_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate commented-out code
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments (RCA tools need many params)
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["rootcause_mcp"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=src/rootcause_mcp",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/rootcause_mcp"]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert used in tests
